--- a/views/main.jade
+++ b/views/main.jade
@@ -16,7 +16,7 @@ block content
                 h3 Usuarios conectados:
                 ol#list-users
 
-        form(class='form-horizontal send')
+        form#send-message(class='form-horizontal send')
             div(class='form-group')
                 input#messages(type='text', class='form-control-static')
             input#submit-message(type='button', value='enviar', class='btn btn-info')
